update users system 1.0

--- a/PromoItServer.model/PromoItServer.model.csproj
+++ b/PromoItServer.model/PromoItServer.model.csproj
@@ -50,6 +50,7 @@
     <Compile Include="RegisterApplication.cs" />
     <Compile Include="SocialActivist.cs" />
     <Compile Include="Tweet.cs" />
+    <Compile Include="UserMessage.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
