--- a/PromoItServer.DataSql/PromoItServer.DataSql.csproj
+++ b/PromoItServer.DataSql/PromoItServer.DataSql.csproj
@@ -43,7 +43,7 @@
   <ItemGroup>
     <Compile Include="GeneralQueries.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RegisterApplicationsQ.cs" />
+    <Compile Include="UsersQueries.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PromoItServer.DAL\PromoItServer.DAL.csproj">
