--- a/PromoItServer.entities/PromoItServer.entities.csproj
+++ b/PromoItServer.entities/PromoItServer.entities.csproj
@@ -43,7 +43,7 @@
   <ItemGroup>
     <Compile Include="MainManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RegisterApplicationsManager.cs" />
+    <Compile Include="UsersManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PromoItServer.DAL\PromoItServer.DAL.csproj">
