--- a/PromoItServer.entities/PromoItServer.entities.csproj
+++ b/PromoItServer.entities/PromoItServer.entities.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CampaignsManager.cs" />
     <Compile Include="MainManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsersManager.cs" />
