--- a/PromoItServer.DataSql/PromoItServer.DataSql.csproj
+++ b/PromoItServer.DataSql/PromoItServer.DataSql.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="CampaignsQueries.cs" />
     <Compile Include="GeneralQueries.cs" />
+    <Compile Include="ProductsQueries.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsersQueries.cs" />
   </ItemGroup>
