--- a/PromoItServer.entities/PromoItServer.entities.csproj
+++ b/PromoItServer.entities/PromoItServer.entities.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="CampaignsManager.cs" />
     <Compile Include="MainManager.cs" />
+    <Compile Include="ProductsManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsersManager.cs" />
   </ItemGroup>
