--- a/PromoItServer.MicroServies/PromoItServer.MicroService.csproj
+++ b/PromoItServer.MicroServies/PromoItServer.MicroService.csproj
@@ -5,9 +5,11 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.1.1" />
+    <PackageReference Include="MySql.Data" Version="8.0.31" />
     <PackageReference Include="RestSharp" Version="108.0.3" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
     <PackageReference Include="System.Text.Json" Version="4.7.2" />
+    <PackageReference Include="TweetinviAPI" Version="5.0.4" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PromoItServer.entities\PromoItServer.entities.csproj" />
