--- a/PromoItServer.MicroServies/PromoItServer.MicroService.csproj
+++ b/PromoItServer.MicroServies/PromoItServer.MicroService.csproj
@@ -16,6 +16,11 @@
     <ProjectReference Include="..\PromoItServer.model\PromoItServer.model.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Utilities_CS">
+      <HintPath>..\..\Utilities_CS\Utilities_CS\bin\Debug\net7.0\Utilities_CS.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+  <ItemGroup>
     <None Update="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
