--- a/PromoItServer.DAL/PromoItServer.DAL.csproj
+++ b/PromoItServer.DAL/PromoItServer.DAL.csproj
@@ -40,8 +40,12 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="Utilities_CS">
+      <HintPath>..\..\Utilities_CS\Utilities_CS\bin\Debug\net7.0\Utilities_CS.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseDAL.cs" />
     <Compile Include="SqlFunctions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
